--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,80 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #f2f2f2;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.header {
+  background-color: #5c6fd8;
+  color: #fff;
+  padding: 10px;
+  text-decoration: cornsilk;
+}
+
+.Taxi {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.footer {
+  background-color: #ccc;
+  color: #333;
+  padding: 10px;
+}
+
+link {
+  color: #c9ccdd;
+  text-decoration: none;
+}
+
+link:hover {
+  text-decoration: underline;
+}
+
+button {
+  background-color: #3f51b5;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #1a237e;
+}
+
+.input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.textarea {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.success {
+  color: green;
+}
+
+.error {
+  color: red;
+}
+
